IA work on the psd revision

--- a/app/views/product-case-testing/add-a-product-to-a-case.html
+++ b/app/views/product-case-testing/add-a-product-to-a-case.html
@@ -33,7 +33,7 @@
         <!-- clicking the 'Add to a case' link on the products page offers a text imput on the next page for the case number - and checks if this is your case? Using the button follows the same logic but skips the manual entry as we use a querystring or hidden input to instantly check if this is your case? We offer the user the option to confirm or cancel. "If this is not your case, go to the <a>Cases page</a> and first locate the case you wish to add this product to, and follow its 'Add a product' link.". -->
 
         <!--p class="govuk-body">
-            The Allergation or Enquiry reference number is: <b>20-2120</b>. Find the product using <a href="products-page.html" class="govuk-link govuk-link--no-visited-state">the products page</a> and [select 'Add to a case', where you can enter the reference number (we confirm if it is the correct case before saving).] (Copy to clip-board).
+            The Allegation or Enquiry reference number is: <b>20-2120</b>. Find the product using <a href="products-page.html" class="govuk-link govuk-link--no-visited-state">the products page</a> and [select 'Add to a case', where you can enter the reference number (we confirm if it is the correct case before saving).] (Copy to clip-board).
         </p-->
 
 
