--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -217,7 +217,7 @@
             </div>
         </dl>
 
-        <h3 id="safety" class="govuk-heading-m opss-grouping__heading-m govuk-!-margin-top-9">
+        <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-9">
             Safety and compliance
         </h3>
 
@@ -227,7 +227,7 @@
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Not provided
+                    
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
