--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -56,7 +56,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing.html" target="_blank">OPSS landing page (Allergation)</a>
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing.html" target="_blank">OPSS landing page (Allegation)</a>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, corporis sed? Fuga aut veritatis architecto exercitationem quae voluptas quisquam blanditiis ab doloribus quas! Repellendus quidem quia qui nemo, a cumque.
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
