--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -20,7 +20,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters">
-                <span class="govuk-caption-l">Allergation: 2101-0008 </span>
+                <span class="govuk-caption-l">Allegation: 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Risk level
                 </h1>
