--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -480,6 +480,10 @@ ul.opss-radio-list {
         }
     }
 
+    & > li:first-child {
+        padding-top: 3px; 
+    }
+
     .opss-left-nav__active {
         ul {
             padding-left: govuk-spacing(6);
@@ -497,3 +501,17 @@ ul.opss-radio-list {
     }
 }
 
+.opss-tabs {
+
+    &.opss-tabs--min-height-s {
+        & > div {
+            min-height: 254px;
+        }
+    }
+    &.opss-tabs--min-height-m {
+        & > div {
+            min-height: 600px;
+        }
+    }    
+
+}
