--- a/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
@@ -10,7 +10,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Allergation: 2101-0008 </span>
+        <span class="govuk-caption-l">Allegation: 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Case
         </h1>
@@ -60,7 +60,7 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Allergation
+                    Allegation
                 </dt>
                 <dd class="govuk-summary-list__value">
                     2101-0008
@@ -183,7 +183,7 @@
             </div>
         </dl>
 
-        <h3 id="safety" class="govuk-heading-m opss-grouping__heading-m govuk-!-margin-top-9">
+        <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-9">
             Safety and compliance
         </h3>
 
@@ -213,6 +213,54 @@
                 </dd>
             </div>
         </dl>
+
+        <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
+            Case related product information
+        </h3>
+
+        
+
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Batch number
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    B2669-233 
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the batch number</span>
+                    </a>
+                </dd>                
+            </div>  
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Customs code
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the customs code</span>
+                    </a>
+                </dd>                
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Units affected
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the units affected</span>
+                    </a>
+                </dd>                
+            </div>              
+        </dl>                   
 
 
     </section>
