--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -10,12 +10,12 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Allergation: 2101-0008 </span>
+        <span class="govuk-caption-l">Allegation: 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Products
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt? Harum expedita vero ea incidunt iusto? Nisi, illo tempore nemo maxime  voluptas amet esse.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">The product record(s) which are linked to this case.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
@@ -78,7 +78,8 @@
         <section>
             <h3 id="prod-1" class="govuk-heading-m">Asda dishwashing liquid</h3>
 
-            <dl class="govuk-summary-list">
+
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
                 <!--div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Product name
@@ -92,7 +93,11 @@
                         <abbr>PSD</abbr> <span title="reference">ref</span>   
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        psd-304
+                        psd-304 
+                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                            <!--span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> database record reference-->
+                            <span class="govuk-visually-hidden"> - </span>The <abbr title="Product Safety database">PSD</abbr> reference for this product record
+                        </span>
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -108,36 +113,9 @@
                         Subcategory
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        Lorem ipsum dolor elit. 
+                        Lorem ipsum dolor elit
                     </dd>
                 </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Product brand
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        Asda
-                    </dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Country of origin
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        China
-                    </dd>
-                </div>                
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Description
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        Lorem ipsum quia possimus minus nam quo minima inventore impedit quaerat architecto veniam iusto, similique ratione voluptatibus molestias iste ipsa ea reiciendis fuga odio.
-                    </dd>
-                </div>                  
-            </dl>
-identifiers
-            <dl class="govuk-summary-list"> 
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Barcode
@@ -145,64 +123,21 @@ identifiers
                     <dd class="govuk-summary-list__value">
                         342984-9813766
                     </dd>
-                </div>                    
-                <div class="govuk-summary-list__row opss-summary-list__row--split">
-                    <dt class="govuk-summary-list__key">
-                        Batch number
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        
-                    </dd>
-                </div>
-                <div class="govuk-summary-list__row opss-summary-list__row--split">
-                    <dt class="govuk-summary-list__key">
-                        Customs code
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        
-                    </dd>
-                </div>                
+                </div>                  
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Other product identifiers
+                        Brand
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        NO.DY807
-                    </dd>
-                </div>
-            </dl>
-            case related
-            <dl class="govuk-summary-list"> 
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Product authenticity
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        Not provided
+                        Asda
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Product marking 
+                        Description
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        Unknown
-                    </dd>
-                </div> 
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Date placed on the market
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        22 September 2021
-                    </dd>
-                </div> 
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Units affected
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        Not provided
+                        Lorem ipsum quia possimus minus nam quo minima inventore impedit quaerat architecto veniam iusto, similique ratione voluptatibus molestias iste ipsa ea reiciendis fuga odio.
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -212,9 +147,249 @@ identifiers
                     <dd class="govuk-summary-list__value">
                        
                     </dd>
-                </div>                                                               
-            </dl>
+                </div>       
+                <div class="govuk-summary-list__row opss-summary-list__row--split">
+                    <dt class="govuk-summary-list__key">Last updated</dt>
+                    <dd class="govuk-summary-list__value">About 8 hours ago</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Created</dt>
+                    <dd class="govuk-summary-list__value">13 December 2021</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Product record owner</dt>
+                    <dd class="govuk-summary-list__value">Lorem ipsum</dd>
+                    <dd class="govuk-summary-list__actions">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Contact<span class="govuk-visually-hidden"> the product's record owner</span>
+                        </a>
+                    </dd>
+                </div>                                
+            </dl>            
+
+            <div class="govuk-tabs opss-tabs opss-tabs--min-height-s" data-module="govuk-tabs">
+                <h3 class="govuk-tabs__title">
+                  Information related to this <abbr>PSD</abbr> product record
+                </h3>
+                
+                <ul class="govuk-tabs__list">
+                  <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+                    <a class="govuk-tabs__tab" href="#product-tab">
+                      Details
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#images-tab">
+                      Images
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#attachments-tab">
+                      Attachments
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#cases-tab">
+                      Cases
+                    </a>
+                  </li>
+                </ul>
+
+                <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab">
+
+                    <dl class="govuk-summary-list"> 
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Market date <!-- Date placed on the market -->
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                22 September 2021
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                                    <span class="govuk-visually-hidden"> - </span>Placed on the market
+                                </span>
+                            </dd>
+                        </div>                              
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Country of origin
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                China
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product authenticity
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product marking 
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Unknown
+                            </dd>
+                        </div> 
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key opss-border-none">
+                                Other product identifiers
+                            </dt>
+                            <dd class="govuk-summary-list__value opss-border-none">
+                                NO.DY807
+                            </dd>
+                        </div>
+                    </dl>                
+              
+                </div>
+
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab">
+                  
+                    <h2 class="govuk-heading-l">Past week</h2>
+                  
+                  <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                      <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Case manager</th>
+                        <th scope="col" class="govuk-table__header">Cases opened</th>
+                        <th scope="col" class="govuk-table__header">Cases closed</th>
+                      </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">David Francis</td>
+                        <td class="govuk-table__cell">24</td>
+                        <td class="govuk-table__cell">18</td>
+                      </tr>
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Paul Farmer</td>
+                        <td class="govuk-table__cell">16</td>
+                        <td class="govuk-table__cell">20</td>
+                      </tr>
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Rita Patel</td>
+                        <td class="govuk-table__cell">24</td>
+                        <td class="govuk-table__cell">27</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              
+                </div>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab">
+                  <h2 class="govuk-heading-l">Past month</h2>
+                  <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                      <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Case manager</th>
+                        <th scope="col" class="govuk-table__header">Cases opened</th>
+                        <th scope="col" class="govuk-table__header">Cases closed</th>
+                      </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">David Francis</td>
+                        <td class="govuk-table__cell">98</td>
+                        <td class="govuk-table__cell">95</td>
+                      </tr>
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Paul Farmer</td>
+                        <td class="govuk-table__cell">122</td>
+                        <td class="govuk-table__cell">131</td>
+                      </tr>
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Rita Patel</td>
+                        <td class="govuk-table__cell">126</td>
+                        <td class="govuk-table__cell">142</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              
+                </div>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab">
+                  <h4 class="govuk-heading-s">This product record also forms part of these cases</h4>
+                  
+                  <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                      <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Case manager</th>
+                        <th scope="col" class="govuk-table__header">Cases opened</th>
+                        <th scope="col" class="govuk-table__header">Cases closed</th>
+                      </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">David Francis</td>
+                        <td class="govuk-table__cell">1380</td>
+                        <td class="govuk-table__cell">1472</td>
+                      </tr>
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Paul Farmer</td>
+                        <td class="govuk-table__cell">1129</td>
+                        <td class="govuk-table__cell">1083</td>
+                      </tr>
+                      <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Rita Patel</td>
+                        <td class="govuk-table__cell">1539</td>
+                        <td class="govuk-table__cell">1265</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              
+                </div>
+            </div>
+              
+            <!--h3 id="product-info-1" class="govuk-heading-s govuk-!-margin-bottom-1">
+                Case related product information
+            </h3>
+    
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">
+                        Batch number
+                    </dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">
+                        B2669-233 
+                    </dd>
+                    <dd class="govuk-summary-list__actions govuk-!-font-size-16">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Edit<span class="govuk-visually-hidden"> the batch number</span>
+                        </a>
+                    </dd>                
+                </div>  
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">
+                        Customs code
+                    </dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">
+                        
+                    </dd>
+                    <dd class="govuk-summary-list__actions govuk-!-font-size-16">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Edit<span class="govuk-visually-hidden"> the customs code</span>
+                        </a>
+                    </dd>                
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">
+                        Units affected
+                    </dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">
+                        
+                    </dd>
+                    <dd class="govuk-summary-list__actions govuk-!-font-size-16">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Edit<span class="govuk-visually-hidden"> the units affected</span>
+                        </a>
+                    </dd>                
+                </div>              
+            </dl>                
+
         </section>
+
+        <hr class="govuk-section-break govuk-section-break--xl XXXXgovuk-section-break--visible"--><!-- if another product follows ... -->
+
 
     </section>
 </div>
