--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -132,6 +132,11 @@
                 <dd class="govuk-summary-list__value">
                     <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
                 </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Change<span class="govuk-visually-hidden"> the notifying country</span>
+                    </a>
+                </dd>                 
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
