--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,22 +31,22 @@
 
       <p class="govuk-body">Additional <b>CSS/SASS</b> styles: app/assets/sass/application.scss</p-->
 
-      <h1 class="govuk-heading-l">PSD / SCNP prototype demos:</h1>
+      <h1 class="govuk-heading-l">PSD/COS prototypes/designs:</h1>
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible" style="margin-bottom: 140px;">
 
-      <h2 class="govuk-heading-l govuk-!-margin-top-9"><abbr>PSD</abbr> designs</h2>
+      <h2 class="govuk-heading-l govuk-!-margin-top-9"><abbr>PSD</abbr> designs - latest</h2>
 
-      <h3 class="govuk-heading-m">Terms and conditions - Declaration</h3>
+      <!--h3 class="govuk-heading-m">Terms and conditions - Declaration</h3>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/terms-and-conditions/example-1.html" target="_blank">example 1</a></li>
-      </ul>
+      </ul-->
 
-      <h3 class="govuk-heading-m">Change the case owner</h3>
+      <!--h3 class="govuk-heading-m">Change the case owner</h3>
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/case-owner-change-page/improve-case-owner-change-page" target="_blank">Improve case owner change page (HTML)</a></li>
         <li><a href="/case-owner-change-page/improve-case-owner-change-page-error" target="_blank">Improve case owner change page (HTML) errors</a></li>
-      </ul>
+      </ul-->
 
       <h3 class="govuk-heading-m">Create case / Add product - users flow</h3>
 
@@ -158,10 +158,10 @@
         </div>
       </details>
 
-
+<!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible" style="margin-bottom: 100px;">
 
-      <h2 class="govuk-heading-l"><abbr>SCNP</abbr>/Cosmetics designs</h2>
+      <h2 class="govuk-heading-l">Cosmetics designs - latest</h2>
 
       <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
         <summary class="govuk-details__summary">
@@ -172,22 +172,40 @@
         <div class="govuk-details__text">
 
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/cosmetics-general/completed-draft.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Approve and submit draft page</a></li>
-            <!--li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
-            <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
-            <li>Responsible Person address form (COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
-            <li>Change Responsible Person address form <br><a href="/responsible-person-address/responsible-person-address_updates.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Updates to the edit/change RP address page</a></li>
-
+            <li>Add Responsible Person details form (formerly COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - details form page</a></li>
+            <li>Edit Responsible Person address form <br><a href="/responsible-person-address/responsible-person-address_updates.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Updates to the edit/change RP address page</a></li>
           </ul>
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
           <ul class="govuk-list govuk-list--bullet">
-            <li>Provide users with ability to remove an invited user (and cancel the invite token), (COSBETA-1293)</li>
-            <li><a href="/nanomaterials-1149/team-members.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Team members - showing new 'Cancel invitation' link</a></li>
+            <li><a href="/nanomaterials-1149/team-members.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Team members - showing new 'Cancel invitation' link</a> <small>(Ability to remove an invited user (and cancel the invite token), (COSBETA-1293)</small></li>
             <li><a href="/cosmetics-general/cancel-invitation.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Cancel invitation page</a></li>
-            <li><a href="/nanomaterials-1149/team-members-cancelled.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Cancel invitation page</a></li>
+            <li><a href="/nanomaterials-1149/team-members-cancelled.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Cancel invitation page</a> - sussess banner </li>
           </ul>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b.html" target="_blank">Incomplete product page</a>
+              <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/incomplete-product_a.html" target="_blank">Incomplete alt v</a></li>
+              </ul>
+            </li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/completed-with-message.html" target="_blank">Completed - with message example</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified.html" target="_blank">Complete product page</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified-success.html" target="_blank">Includes example of new success banner </a></li>
+          </ul>
+
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_1.html" target="_blank">Incomplete notification</a> - Multi item kit - File has been uploaded - Accept button disabled</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_2.html" target="_blank">Incomplete notification</a> - Multi item kit - Clicking the Refresh link confirms success</li>
+
+
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_3.html" target="_blank">Concentration ranges</a> - single item statement at Upload file form</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_4.html" target="_blank">Concentration ranges</a> - file removed success banner</li>
+          </ul>
+
         </div>
       </details>
 
@@ -221,6 +239,7 @@
         <div class="govuk-details__text">
             <ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01.html" target="_blank">Cosmetic products</a>
+                
                 <ul class="govuk-list govuk-list--bullet">
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none.html" target="_blank">Cosmetic products (0 incomplete, 3 errors example)</a></li>
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html" target="_blank">Cosmetic products (0 incomplete, 0 errors example).</a></li>
@@ -228,59 +247,27 @@
                   <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/cosmetic-products-alt-01-refresh.html" target="_blank">Cosmetic products (with errors and Refresh message). <br>Continued temporary use.</a></li>
                   <li><a class="govuk-link govuk-link--no-visited-state strike govuk-body-s" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
                 </ul>
+
               </li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a> New list style
+              
                 <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/nanomaterials-old.html" target="_blank">Nanomaterials</a> Old list style (being replaced)</li>
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html" target="_blank">Nanomaterial details</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/nanomaterials-old.html" target="_blank">Nanomaterials - old</a></li>
                 </ul>
               </li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a></li>
-              <li>Change the Responsible Person (COSBETA-1236): <br><a href="/nanomaterials-1149/change-responsible-person.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Change the Responsible Person</a></li>
-              <li>Responsible Person page <br><a href="/nanomaterials-1149/responsible-person-new-edit.html" class="govuk-link govuk-link--no-visited-state" target="_blank">with new single Edit link</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html" target="_blank">Team members</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html" target="_blank">Cosmetic products - success banner</a></li>
-            </ul>
-        </div>
-      </details>
 
-      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
-        <summary class="govuk-details__summary">
-          <span class="govuk-details__summary-text">
-            Cosmetics general:
-          </span>
-        </summary>
-        <div class="govuk-details__text">
-
-
-
-            <!--p class="govuk-body">
-              New pages for the <br>
-              <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/tasks/index" target="_blank">New tasks based user journey</a>
-            </p>
-
-
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"-->
-            <ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b.html" target="_blank">Incomplete product page</a>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a>
                 <ul class="govuk-list govuk-list--bullet">
-                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/incomplete-product_a.html" target="_blank">Incomplete alt v</a></li>
+                  <li><a href="/nanomaterials-1149/change-responsible-person.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Change the Responsible Person</a> (COSBETA-1236): with improved <abbr>UI</abbr> detailing</li>
+
+                  <li>Responsible Person page <a href="/nanomaterials-1149/responsible-person-new-edit.html" class="govuk-link govuk-link--no-visited-state" target="_blank">with new single Edit link</a></li>
                 </ul>
               </li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/completed-with-message.html" target="_blank">Completed - with message example</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified.html" target="_blank">Complete product page</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified-success.html" target="_blank">Includes example of new success banner </a></li>
-            </ul>
 
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html" target="_blank">Team members</a></li>
 
-            <ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_1.html" target="_blank">Incomplete notification</a> - Multi item kit - File has been uploaded - Accept button disabled</li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_2.html" target="_blank">Incomplete notification</a> - Multi item kit - Clicking the Refresh link confirms success</li>
-
-
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_3.html" target="_blank">Concentration ranges</a> - single item statement at Upload file form</li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_4.html" target="_blank">Concentration ranges</a> - file removed success banner</li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html" target="_blank">Cosmetic products with success banner</a> - old page, with new banner</li>
             </ul>
         </div>
       </details>
@@ -288,30 +275,21 @@
       <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            Cosmetic Add Product - new tasks flow work:
+            Add a product - new tasks flow work:
           </span>
         </summary>
         <div class="govuk-details__text">
             <h3 class="govuk-heading-s">Tasks based flow: <abbr>HTML</abbr> page designs</h3>
             <p class="govuk-body"><a href="/cosmetics-general/tasks/index.html" class="govuk-link govuk-link--no-visited-state" target="_blank">All  <abbr>HTML</abbr> page designs</a></p>
 
-            <!--ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/xxx.html" target="_blank">xxx</a>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/xxx.html" target="_blank">xxx</a></li>
-                </ul>
-              </li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/xxx.html" target="_blank">xxx</a></li>
-            </ul-->
 
-
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <!--hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <h3 class="govuk-heading-s">Tasks based flow - First Draft prototype</h3>
             <div class="opss-borders opss-borders--all">
               <p class="govuk-body-s"><u>Out of date</u>: for reference only...</p>
               <p class="govuk-body-s strike">A series of 3 user journeys stepping through the visual task based flow of the draft page - required for breaking the current 'add a product' service into smaller tasks: </p>
               <p class="govuk-body"><a href="/drafts-gui/index.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Drafts <abbr>GUI</abbr> 1194</a></p>
-            </div>
+            </div-->
 
         </div>
       </details>
